--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "stellar-relief-backoffice",
-  "version": "1.0.0",
+  "name": "stellar-disbursement-platform-frontend",
+  "version": "1.0.0-rc2",
   "license": "Apache-2.0",
   "engines": {
     "node": ">=18.x"
@@ -77,7 +77,7 @@
     "production": "yarn prod:build && yarn prod:serve",
     "prepare": "husky install",
     "pre-commit": "concurrently 'pretty-quick --staged' 'lint-staged' 'tsc --noEmit'",
-    "git-info": "rm -rf src/generated/ && mkdir src/generated/ && echo export default \"{\\\"commitHash\\\": \\\"$(git rev-parse --short HEAD)\\\"};\" > src/generated/gitInfo.ts"
+    "git-info": "rm -rf src/generated/ && mkdir src/generated/ && echo export default \"{\\\"commitHash\\\": \\\"$(git rev-parse --short HEAD)\\\", \\\"version\\\": \\\"$(git describe --tags --always)\\\"};\" > src/generated/gitInfo.ts"
   },
   "eslintConfig": {
     "extends": [
