--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@stellar/tsconfig": "^1.0.2",
     "@svgr/webpack": "8.0.1",
     "@tanstack/react-query": "^4.29.25",
+    "@tanstack/react-query-devtools": "^4.35.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
