--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "buffer": "^6.0.3",
     "concurrently": "^8.2.0",
     "crypto-browserify": "^3.12.0",
+    "date-fns": "^2.30.0",
     "eslint": "^8.45.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-config-react": "^1.1.7",
