--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "stellar-disbursement-platform-frontend",
-  "version": "1.0.0-rc2",
+  "version": "1.0.0",
   "license": "Apache-2.0",
   "engines": {
     "node": ">=18.x"
