--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
-    "@stellar/design-system": "^1.0.0-beta.14",
+    "@stellar/design-system": "^1.0.0",
     "@stellar/tsconfig": "^1.0.2",
     "@svgr/webpack": "8.0.1",
     "@tanstack/react-query": "^4.29.25",
