--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "concurrently": "^8.2.2",
     "crypto-browserify": "^3.12.0",
     "date-fns": "^2.30.0",
+    "dotenv": "^16.3.1",
     "eslint": "^8.52.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-config-react": "^1.1.7",
@@ -55,8 +56,10 @@
     "oidc-client-ts": "^2.3.0",
     "os-browserify": "^0.3.0",
     "papaparse": "^5.4.1",
+    "path-browserify": "^1.0.1",
     "prettier": "^2.8.7",
     "pretty-quick": "^3.1.3",
+    "process": "^0.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-recaptcha": "^3.1.0",
