--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "stellar-disbursement-platform-frontend",
-  "version": "1.1.1",
+  "version": "2.0.0-rc1",
   "license": "Apache-2.0",
   "engines": {
     "node": ">=18.x"
