--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -2,7 +2,9 @@ name: Test and build
 
 on:
   push:
-    branches: [main]
+    branches:
+      - main
+      - develop
   pull_request:
   workflow_call: # allows this workflow to be called from another workflow
 
@@ -10,8 +12,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: 18
       - run: yarn install
