--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "lint-staged": {
     "src/**/*.ts?(x)": [
-      "eslint --fix --max-warnings 0 --config eslint.config.mjs"
+      "eslint --fix --max-warnings 0"
     ]
   },
   "private": true,
