--- a/.github/workflows/automated_release_process.yml
+++ b/.github/workflows/automated_release_process.yml
@@ -47,7 +47,7 @@ jobs:
 
       - name: Create release/${{ inputs.version }} branch
         run: |
-          git checkout -b release/${{ inputs.version }} origin/develop
+          git checkout -b release/${{ inputs.version }} origin/${{ github.ref_name }}
           sed -i 's/"version": ".*"/"version": "${{ inputs.version }}"/' package.json
           git add package.json
           git commit -m "chore: bump version to ${{ inputs.version }}"
