--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/lodash": "^4.17.13",
     "@types/node": "^22.10.1",
     "@types/react": "^18.3.12",
+    "@types/react-datepicker": "^7.0.0",
     "@types/react-dom": "^18.3.1",
     "@types/react-google-recaptcha": "^2.1.9",
     "@types/react-redux": "^7.1.34",
@@ -60,6 +61,7 @@
     "pretty-quick": "^4.0.0",
     "process": "^0.11.10",
     "react": "^18.3.1",
+    "react-datepicker": "^8.2.1",
     "react-dom": "^18.3.1",
     "react-google-recaptcha": "^3.1.0",
     "react-redux": "^9.1.2",
