--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.4.0",
     "@stellar/design-system": "^1.1.3",
+    "@stellar/stellar-sdk": "^13.3.0",
     "@stellar/tsconfig": "^1.0.2",
     "@svgr/webpack": "8.1.0",
     "@tanstack/react-query": "^5.62.3",
