--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@typescript-eslint/parser": "^8.17.0",
     "assert": "^2.1.0",
     "bignumber.js": "^9.1.2",
+    "brace-expansion": "1.1.12",
     "buffer": "^6.0.3",
     "concurrently": "^9.1.0",
     "crypto-browserify": "^3.12.1",
@@ -56,6 +57,7 @@
     "os-browserify": "^0.3.0",
     "papaparse": "^5.4.1",
     "path-browserify": "^1.0.1",
+    "pbkdf2": "3.1.3",
     "prettier": "^3.4.2",
     "pretty-quick": "^4.0.0",
     "process": "^0.11.10",
@@ -125,6 +127,7 @@
     "typescript-eslint": "^8.17.0",
     "webpack": "^5.97.1",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.2.0"
+    "webpack-dev-server": "^5.2.1",
+    "yarn-deduplicate": "^6.0.2"
   }
 }
