--- a/package.json
+++ b/package.json
@@ -77,7 +77,9 @@
   "resolutions": {
     "asn1.js": "5.4.0",
     "browserify-sign": "^4.2.3",
-    "@babel/traverse": "^7.23.2"
+    "@babel/traverse": "^7.23.2",
+    "pbkdf2": "^3.1.3",
+    "brace-expansion": "^1.1.12"
   },
   "scripts": {
     "start": "yarn git-info && webpack serve --open --config webpack.dev.js",
