--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,7 +1,6 @@
 {
-  "arrowParens:": "always",
+  "arrowParens": "always",
   "bracketSpacing": true,
-  "jsxBracketSameLine": false,
   "printWidth": 100,
   "proseWrap": "always",
   "semi": true,
