--- a/package.json
+++ b/package.json
@@ -14,48 +14,21 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.4.0",
     "@stellar/design-system": "^3.1.4",
-    "@stellar/tsconfig": "^1.0.2",
     "@tanstack/react-query": "^5.62.3",
     "@tanstack/react-query-devtools": "^5.62.3",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.1.0",
-    "@testing-library/user-event": "^14.5.2",
-    "@types/jest": "^29.5.14",
-    "@types/lodash": "^4.17.13",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "@types/react-google-recaptcha": "^2.1.9",
-    "@types/react-redux": "^7.1.34",
-    "@types/react-router-dom": "^5.3.3",
-    "@types/uuid": "^10.0.0",
-    "@typescript-eslint/eslint-plugin": "^8.17.0",
-    "@typescript-eslint/parser": "^8.17.0",
     "assert": "^2.1.0",
     "bignumber.js": "^9.1.2",
     "brace-expansion": "1.1.12",
     "buffer": "^6.0.3",
-    "concurrently": "^9.1.0",
     "crypto-browserify": "^3.12.1",
     "date-fns": "^4.1.0",
-    "eslint": "^9.16.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-config-react": "^1.1.7",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-jsx-a11y": "^6.10.2",
-    "eslint-plugin-prefer-arrow": "^1.2.3",
-    "eslint-plugin-react": "^7.37.2",
-    "eslint-plugin-react-hooks": "^5.1.0",
     "https-browserify": "^1.0.0",
-    "husky": "^9.1.7",
-    "lint-staged": "^15.2.10",
     "lodash": "^4.17.21",
     "oidc-client-ts": "^3.1.0",
     "os-browserify": "^0.3.0",
     "papaparse": "^5.4.1",
     "path-browserify": "^1.0.1",
     "pbkdf2": "3.1.3",
-    "prettier": "^3.4.2",
-    "pretty-quick": "^4.0.0",
     "process": "^0.11.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -63,24 +36,16 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^7.0.2",
     "redux": "^5.0.1",
-    "sass": "^1.82.0",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
-    "typescript": "^5.7.2",
     "url": "^0.11.4",
     "uuid": "^10.0.0"
-  },
-  "resolutions": {
-    "asn1.js": "5.4.0",
-    "browserify-sign": "^4.2.3",
-    "@babel/traverse": "^7.23.2",
-    "pbkdf2": "^3.1.3",
-    "brace-expansion": "^1.1.12"
   },
   "scripts": {
     "start": "yarn git-info && vite",
     "build": "yarn git-info && vite build",
     "preview": "vite preview",
+    "refresh-lock": "yarn-deduplicate yarn.lock && yarn install",
     "install-if-package-changed": "git diff-tree -r --name-only --no-commit-id ORIG_HEAD HEAD | grep --quiet yarn.lock && yarn install || exit 0",
     "prod:build": "docker image build -t disbursement-platform-frontend:localbuild .",
     "prod:serve": "docker run -p 8000:80 disbursement-platform-frontend:localbuild",
@@ -103,11 +68,40 @@
     ]
   },
   "devDependencies": {
+    "@stellar/tsconfig": "^1.0.2",
     "@tanstack/eslint-plugin-query": "^5.62.1",
-    "@types/papaparse": "^5.3.15",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.1.0",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/jest": "^29.5.14",
+    "@types/lodash": "^4.17.20",
     "@types/node": "^22.10.1",
+    "@types/papaparse": "^5.3.16",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "@types/react-google-recaptcha": "^2.1.9",
+    "@types/react-redux": "^7.1.34",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/uuid": "^10.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.17.0",
+    "@typescript-eslint/parser": "^8.17.0",
     "@vitejs/plugin-react-swc": "^3.7.1",
+    "concurrently": "^9.1.0",
+    "eslint": "^9.16.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-react": "^1.1.7",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.1.0",
     "globals": "^15.13.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.2.10",
+    "prettier": "^3.4.2",
+    "pretty-quick": "^4.0.0",
+    "sass": "^1.82.0",
+    "typescript": "^5.7.2",
     "typescript-eslint": "^8.17.0",
     "vite": "^6.0.3",
     "vite-plugin-node-polyfills": "^0.22.0",
