--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "3.7.0",
   "license": "Apache-2.0",
   "engines": {
-    "node": ">=20.x"
+    "node": ">=22.x"
   },
   "lint-staged": {
     "src/**/*.ts?(x)": [
@@ -12,77 +12,40 @@
   },
   "private": true,
   "dependencies": {
-    "@reduxjs/toolkit": "^2.4.0",
+    "@reduxjs/toolkit": "^2.8.2",
     "@stellar/design-system": "^3.1.4",
-    "@stellar/tsconfig": "^1.0.2",
-    "@tanstack/react-query": "^5.62.3",
-    "@tanstack/react-query-devtools": "^5.62.3",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.1.0",
-    "@testing-library/user-event": "^14.5.2",
-    "@types/jest": "^29.5.14",
-    "@types/lodash": "^4.17.13",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "@types/react-google-recaptcha": "^2.1.9",
-    "@types/react-redux": "^7.1.34",
-    "@types/react-router-dom": "^5.3.3",
-    "@types/uuid": "^10.0.0",
-    "@typescript-eslint/eslint-plugin": "^8.17.0",
-    "@typescript-eslint/parser": "^8.17.0",
+    "@tanstack/react-query": "^5.85.3",
+    "@tanstack/react-query-devtools": "^5.85.3",
     "assert": "^2.1.0",
-    "bignumber.js": "^9.1.2",
-    "brace-expansion": "1.1.12",
+    "bignumber.js": "^9.3.1",
+    "brace-expansion": "4.0.1",
     "buffer": "^6.0.3",
-    "concurrently": "^9.1.0",
     "crypto-browserify": "^3.12.1",
     "date-fns": "^4.1.0",
-    "eslint": "^9.16.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-config-react": "^1.1.7",
-    "eslint-config-react-app": "^7.0.1",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-jsx-a11y": "^6.10.2",
-    "eslint-plugin-prefer-arrow": "^1.2.3",
-    "eslint-plugin-react": "^7.37.2",
-    "eslint-plugin-react-hooks": "^5.1.0",
     "https-browserify": "^1.0.0",
-    "husky": "^9.1.7",
-    "lint-staged": "^15.2.10",
     "lodash": "^4.17.21",
-    "oidc-client-ts": "^3.1.0",
+    "oidc-client-ts": "^3.3.0",
     "os-browserify": "^0.3.0",
-    "papaparse": "^5.4.1",
+    "papaparse": "^5.5.3",
     "path-browserify": "^1.0.1",
     "pbkdf2": "3.1.3",
-    "prettier": "^3.4.2",
-    "pretty-quick": "^4.0.0",
     "process": "^0.11.10",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "react-google-recaptcha": "^3.1.0",
-    "react-redux": "^9.1.2",
-    "react-router-dom": "^7.0.2",
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^7.8.0",
     "redux": "^5.0.1",
-    "sass": "^1.82.0",
-    "sass-loader": "^16.0.4",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
-    "typescript": "^5.7.2",
     "url": "^0.11.4",
-    "uuid": "^10.0.0"
-  },
-  "resolutions": {
-    "asn1.js": "5.4.0",
-    "browserify-sign": "^4.2.3",
-    "@babel/traverse": "^7.23.2",
-    "pbkdf2": "^3.1.3",
-    "brace-expansion": "^1.1.12"
+    "uuid": "^11.1.0"
   },
   "scripts": {
     "start": "yarn git-info && vite",
     "build": "yarn git-info && vite build",
     "preview": "vite preview",
+    "refresh-lock": "yarn-deduplicate yarn.lock && yarn install",
     "install-if-package-changed": "git diff-tree -r --name-only --no-commit-id ORIG_HEAD HEAD | grep --quiet yarn.lock && yarn install || exit 0",
     "prod:build": "docker image build -t disbursement-platform-frontend:localbuild .",
     "prod:serve": "docker run -p 8000:80 disbursement-platform-frontend:localbuild",
@@ -90,12 +53,6 @@
     "prepare": "husky",
     "pre-commit": "concurrently 'pretty-quick --staged --pattern \"**/*.{ts,tsx,js,jsx}\"' 'lint-staged' 'tsc --noEmit'",
     "git-info": "rm -rf src/generated/ && mkdir -p src/generated/ && echo \"export default { commitHash: '$(git rev-parse --short HEAD)', version: '$(git describe --tags --always)' };\" > src/generated/gitInfo.ts"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
@@ -111,12 +68,41 @@
     ]
   },
   "devDependencies": {
-    "@tanstack/eslint-plugin-query": "^5.62.1",
-    "@types/papaparse": "^5.3.15",
-    "@types/node": "^22.10.1",
+    "@stellar/tsconfig": "^1.0.2",
+    "@tanstack/eslint-plugin-query": "^5.83.1",
+    "@testing-library/jest-dom": "^6.7.0",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "^30.0.0",
+    "@types/lodash": "^4.17.20",
+    "@types/node": "^24.2.1",
+    "@types/papaparse": "^5.3.16",
+    "@types/react": "^19.1.10",
+    "@types/react-dom": "^19.1.7",
+    "@types/react-google-recaptcha": "^2.1.9",
+    "@types/react-redux": "^7.1.34",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/uuid": "^10.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.39.1",
+    "@typescript-eslint/parser": "^8.39.1",
     "@vitejs/plugin-react-swc": "^3.7.1",
-    "globals": "^15.13.0",
-    "typescript-eslint": "^8.17.0",
+    "concurrently": "^9.2.0",
+    "eslint": "^9.33.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-config-react": "^1.1.7",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "globals": "^16.3.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.1.5",
+    "prettier": "^3.6.2",
+    "pretty-quick": "^4.2.2",
+    "sass": "^1.90.0",
+    "typescript": "^5.9.2",
+    "typescript-eslint": "^8.39.1",
     "vite": "^6.0.3",
     "vite-plugin-node-polyfills": "^0.22.0",
     "vite-plugin-static-copy": "^2.1.0",
