--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "stellar-disbursement-platform-frontend",
   "version": "4.1.0",
   "license": "Apache-2.0",
+  "type": "module",
   "engines": {
     "node": ">=22.x"
   },
@@ -44,6 +45,7 @@
   },
   "scripts": {
     "start": "yarn git-info && vite",
+    "start:https": "yarn git-info && VITE_USE_HTTPS=true vite",
     "build": "yarn git-info && vite build",
     "preview": "vite preview",
     "refresh-lock": "yarn-deduplicate yarn.lock && yarn install",
