--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
   },
   "private": true,
   "dependencies": {
-    "@stellar/stellar-sdk": "^13.3.0",
     "@reduxjs/toolkit": "^2.8.2",
+    "@simplewebauthn/browser": "^13.2.2",
     "@stellar/design-system": "^3.1.4",
+    "@stellar/stellar-sdk": "^13.3.0",
     "@tanstack/react-query": "^5.85.3",
     "@tanstack/react-query-devtools": "^5.85.3",
     "assert": "^2.1.0",
