--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,6 @@
 {
   "extends": "@stellar/tsconfig",
   "compilerOptions": {
-    "baseUrl": "src/",
     "target": "es2017",
     "lib": ["dom", "dom.iterable", "esnext"],
     "module": "esnext",
@@ -11,7 +10,7 @@
     "allowSyntheticDefaultImports": true,
     "types": ["vite/client", "vite-plugin-svgr/client"],
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./src/*"]
     }
   },
   "include": ["src", "vite.config.ts"]
