--- a/.github/workflows/automated_release_process.yml
+++ b/.github/workflows/automated_release_process.yml
@@ -119,17 +119,13 @@ jobs:
           git push origin release/${{ inputs.version }}
 
       - name: Create main PR
-        id: create_main_pr
         run: |
-          MAIN_PR_URL=$(sed "s/{{version}}/${{ inputs.version }}/g" .github/workflows/templates/release-pr-main.md | \
           gh pr create --repo ${{ env.REPO_ORG }}/${{ env.REPO_NAME }} \
             --base main \
             --head release/${{ inputs.version }} \
-            --title "Release \`${{ inputs.version }}\` to \`main\`" \
-            --body-file - \
-            --assignee "${{ github.actor }}" \
-            --reviewer "${{ env.REVIEWER }}")
-          echo "main_pr_url=${MAIN_PR_URL}" >> $GITHUB_OUTPUT
+            --title "TEST: Release \`${{ inputs.version }}\` to \`main\`" \
+            --body "Testing CHANGELOG generation with Claude Code Action" \
+            --assignee "${{ github.actor }}"
 
       - name: Create release/${{ inputs.version }}-dev branch
         run: |
@@ -137,63 +133,10 @@ jobs:
           git push origin release/${{ inputs.version }}-dev
 
       - name: Create develop PR
-        id: create_dev_pr
         run: |
-          DEV_PR_URL=$(sed -e "s/{{version}}/${{ inputs.version }}/g" \
-              -e "s|{{ main_pr_url }}|${{ steps.create_main_pr.outputs.main_pr_url }}|g" \
-              .github/workflows/templates/release-pr-dev.md | \
           gh pr create --repo ${{ env.REPO_ORG }}/${{ env.REPO_NAME }} \
             --base develop \
             --head release/${{ inputs.version }}-dev \
-            --title "Release \`${{ inputs.version }}\` to \`dev\`" \
-            --body-file - \
-            --assignee "${{ github.actor }}" \
-            --reviewer "${{ env.REVIEWER }}")
-          echo "dev_pr_url=${DEV_PR_URL}" >> $GITHUB_OUTPUT
-
-      - name: Extract release notes from CHANGELOG
-        run: |
-          VERSION="${{ inputs.version }}"
-          python3 -c "
-          import re, sys
-          text = open('CHANGELOG.md').read()
-          m = re.search(r'(## \[' + re.escape('$VERSION') + r'\].*?)(?=\n## \[|\Z)', text, re.DOTALL)
-          sys.stdout.write(m.group(1) if m else '')
-          " > /tmp/release-notes.md
-
-          if [ ! -s /tmp/release-notes.md ]; then
-            echo "Initial draft for release \`$VERSION\`" > /tmp/release-notes.md
-          fi
-
-      - name: Create Draft Release
-        id: create_release
-        run: |
-          RELEASE_URL=$(gh release create "${{ inputs.version }}" \
-            --title "${{ inputs.version }}" \
-            --draft \
-            --notes-file /tmp/release-notes.md)
-          echo "release_url=${RELEASE_URL}" >> $GITHUB_OUTPUT
-
-      - name: Create Issue
-        id: create_issue
-        run: |
-          ISSUE_URL=$(sed -e "s/{{version}}/${{ inputs.version }}/g" \
-              -e "s|{{ main_pr_url }}|${{ steps.create_main_pr.outputs.main_pr_url }}|g" \
-              -e "s|{{ dev_pr_url }}|${{ steps.create_dev_pr.outputs.dev_pr_url }}|g" \
-              -e "s|{{ release_url }}|${{ steps.create_release.outputs.release_url }}|g" \
-              .github/workflows/templates/release-issue.md | \
-          gh issue create \
-            --title "Release \`${{ inputs.version }}\`" \
-            --body-file - \
-            --label "release" \
-            --assignee "${{ github.actor }}")
-          echo "issue_url=${ISSUE_URL}" >> $GITHUB_OUTPUT
-
-      - name: Print Summary
-        run: |
-          echo "Release Process Summary for ${{ inputs.version }}"
-          echo "----------------------------------------"
-          echo "Issue: ${{ steps.create_issue.outputs.issue_url }}"
-          echo "Main PR: ${{ steps.create_main_pr.outputs.main_pr_url }}"
-          echo "Dev PR: ${{ steps.create_dev_pr.outputs.dev_pr_url }}"
-          echo "Draft Release: ${{ steps.create_release.outputs.release_url }}"
+            --title "TEST: Release \`${{ inputs.version }}\` to \`dev\`" \
+            --body "Testing CHANGELOG generation with Claude Code Action" \
+            --assignee "${{ github.actor }}"
