--- a/.github/workflows/automated_release_process.yml
+++ b/.github/workflows/automated_release_process.yml
@@ -101,6 +101,7 @@ jobs:
 
             Use the Edit tool to modify CHANGELOG.md. Do not create or modify any other files.
           claude_code_oauth_token: ${{ secrets.CLAUDE_CODE_OAUTH_TOKEN }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           claude_args: --max-turns 10 --allowedTools Read,Edit,Bash
 
       - name: Stage CHANGELOG
