--- a/.github/workflows/automated_release_process.yml
+++ b/.github/workflows/automated_release_process.yml
@@ -61,7 +61,7 @@ jobs:
           LAST_TAG=$(git describe --tags --abbrev=0 2>/dev/null || true)
           BASE="${LAST_TAG:-$(git rev-list --max-parents=0 HEAD)}"
           echo "base=$BASE" >> $GITHUB_OUTPUT
-          git log "$BASE"..HEAD --pretty=format:"%h %s" --no-merges > /tmp/commits.txt
+          git log "$BASE"..HEAD --pretty=format:"%h %s%n%b---" > /tmp/commits.txt
 
       - name: Update CHANGELOG
         continue-on-error: true
@@ -77,7 +77,7 @@ jobs:
 
             STEP 1 — Add new entries to the Unreleased section:
             1. Find the `## [Unreleased]` section in CHANGELOG.md.
-            2. Examine each commit in /tmp/commits.txt. Skip any already covered by an existing entry.
+            2. Examine each commit in /tmp/commits.txt. ONLY consider commits that contain a PR number (e.g. (#123)). Skip all commits without a PR reference.
             3. Skip "chore: automated release preparation" commits.
             4. For each uncovered commit, create a changelog entry:
                - Dependency bumps (chore(deps)) → ### Security and Dependencies
@@ -101,6 +101,7 @@ jobs:
 
             Use the Edit tool to modify CHANGELOG.md. Do not create or modify any other files.
           claude_code_oauth_token: ${{ secrets.CLAUDE_CODE_OAUTH_TOKEN }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           claude_args: --max-turns 10 --allowedTools Read,Edit,Bash
 
       - name: Stage CHANGELOG
